--- a/home.html
+++ b/home.html
@@ -6,8 +6,9 @@
 <body style= text-align:center;">
 
 
-<p>Give me your dogs</p>
+<p>Hi, I'm Leon. I'm a dog groomer in Lisburn</p>
 
 
 </body>
+
 </html>
