--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
   <title>Spellbound Styles - Contact</title>
 </head>
+  
 <body style="background-image: url('images/CHONK.jpg'); text-align:center;">
 
 <h2>Contact</h2>
-<p>Listen here you little shit!</p>
-
-<p style="color:red;">DO NOT CONTACT ME UNDER ANY CIRCUMSTANCES</p>
+<p>Please phone or text me on 078 1234 1234</p>
 
 </body>
+
 </html>
