--- a/about.html
+++ b/about.html
@@ -6,17 +6,18 @@
 <body  style="background-color:blueviolet; text-align:center;">
 
 <h2>About</h2>
-<p style="color:red;">My name is Leon and I am 25 years young.</p>
+<p style="color:red;">My name is Leon and I am a dog groomer from lisburn</p>
 
-<p style="color:orange;">I like Doggies and I like you.</p>
+<p style="color:orange;">I love taking care of dogs, and have two of my own</p>
 
-<p style="color:yellow;">So come on down.</p>
+<p style="color:yellow;">I've been dog grooming for 3 years</p>
 
-<p style="color:green;">And don't you frown.</p>
+<p style="color:green;">Check out the Gallert page to see some of my work</p>
 
-<p style="color:blue;">I'll take your frog.</p>
+<p style="color:blue;">If you like what you see, feel free to contact me to set up an appointment</p>
 
-<p style="color:purple;">And make it a dog.</p>
+<p style="color:purple;">Thank you!</p>
 
 </body>
+
 </html>
