--- a/services.html
+++ b/services.html
@@ -6,9 +6,13 @@
 <body style="background-color:blueviolet; text-align:center;">
 
 <h2>Services</h2>
-<p>I only service 1 (one) man</p>
+<p>I offer washes, full grooms, puppy grooms, and nail cutting</p>
 
-<p style="color:green;">a man named Jack Dawson and and he saved me in every way that a person can be saved.</p>
+<p style="color:green;"Full grooms starting from £25"</p>
+<p style="color:green;"Puppy grooms starting from £20"</p>
+<p style="color:green;"Washes starting from £10"</p>
+<p style="color:green;"Nail cutting starting from £5"</p>
 
 </body>
+
 </html>
