--- a/services.html
+++ b/services.html
@@ -8,11 +8,12 @@
 <h2>Services</h2>
 <p>I offer washes, full grooms, puppy grooms, and nail cutting</p>
 
-<p style="color:green;"Full grooms starting from £25"</p>
-<p style="color:green;"Puppy grooms starting from £20"</p>
-<p style="color:green;"Washes starting from £10"</p>
-<p style="color:green;"Nail cutting starting from £5"</p>
+<p style="color:green;"> Full grooms starting from £25</p>
+<p style="color:green;"> Puppy grooms starting from £20</p>
+<p style="color:green;"> Washes starting from £10</p>
+<p style="color:green;"> Nail cutting starting from £5</p>
 
 </body>
 
 </html>
+
