--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <title>Spellbound Styles - Contact</title>
 </head>
   
-<body style="background-image: url('images/CHONK.jpg'); text-align:center;">
+<!-- <body style="background-image: url('images/CHONK.jpg'); text-align:center;"> -->
 
 <h2>Contact</h2>
 <p>Please phone or text me on 078 1234 1234</p>
@@ -12,3 +12,4 @@
 </body>
 
 </html>
+
