--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,10 @@
 
 <h2>Contact</h2>
 <p>Please phone or text me on 078 1234 1234</p>
+<p>Or send me a message on Facebook or Instagram</p>
 
 </body>
 
 </html>
+
 
