--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,18 @@
 </head>
   
 <!-- <body style="background-image: url('images/CHONK.jpg'); text-align:center;"> -->
+<body  style="background-color:blueviolet; text-align:center;">
 
 <h2>Contact</h2>
 <p>Please phone or text me on 078 1234 1234</p>
 <p>Or send me a message on Facebook or Instagram</p>
 
+  https://www.facebook.com/p/Spellbound-Styles-61563573410339/
+  
+
 </body>
 
 </html>
+
 
 
