--- a/home.html
+++ b/home.html
@@ -6,9 +6,10 @@
 <body style= text-align:center;">
 
 
-<p>Hi, I'm Leon. I'm a dog groomer in Lisburn</p>
+<p>Hi, I'm Leon. I am a fully insured Certified Professional Dog Groomer, trained in pet CPR & first aid</p>
 
 
 </body>
 
 </html>
+
