--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 <body style="background-color:blueviolet; text-align:center;">
 
 <h2>Services</h2>
-<p>I offer washes, full grooms, puppy grooms, and nail cutting</p>
+<h3>I offer washes, full grooms, puppy grooms, and nail cutting</h3>
 
 <p style="color:green;"> Full grooms starting from £25</p>
 <p style="color:green;"> Puppy grooms starting from £20</p>
@@ -16,4 +16,5 @@
 </body>
 
 </html>
+
 
