--- a/services.html
+++ b/services.html
@@ -5,16 +5,17 @@
 </head>
 <body style="background-color:blueviolet; text-align:center;">
 
-<h2>Services</h2>
-<h3>I offer washes, full grooms, puppy grooms, and nail cutting</h3>
+<h1>Services</h1>
+<h2>I offer washes, full grooms, puppy grooms, and nail cutting</h2>
 
-<p style="color:green;"> Full grooms starting from £25</p>
-<p style="color:green;"> Puppy grooms starting from £20</p>
-<p style="color:green;"> Washes starting from £10</p>
-<p style="color:green;"> Nail cutting starting from £5</p>
+<h3 style="color:green;"> Full grooms starting from £25</h3>
+<h3 style="color:green;"> Puppy grooms starting from £20</h3>
+<h3 style="color:green;"> Washes starting from £10</h3>
+<h3 style="color:green;"> Nail cutting starting from £5</h3>
 
 </body>
 
 </html>
+
 
 
