--- a/contact.html
+++ b/contact.html
@@ -9,16 +9,15 @@
 
 <h2>Contact</h2>
 <p>Please phone or text me on 073 9458 7626</p>
-<p>Or send me a message on Facebook or Instagram</p>
+<p>Or send me a message on <a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/">Facebook</a> or <a href="https://www.instagram.com/spellboundstyleslisburn/">Instagram</a></p>
 
-  https://www.facebook.com/p/Spellbound-Styles-61563573410339/
-
-  https://www.instagram.com/spellboundstyleslisburn/
-  
-
+<a href="https://www.instagram.com/spellboundstyleslisburn/"><img src="InstagramLogo.jpg" alt="Instagram"></a>
+<a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/"><img src="FacebookLogo.jpg" alt="Facebook"></a>
+ 
 </body>
 
 </html>
+
 
 
 
