--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>Spellbound Styles</title>
-		<link rel="icon" type="image/x-icon" href="images/CHONK.jpg">
+		<link rel="icon" type="image/x-icon" href="images/SpellboundStylesLogo.jpg">
 
 		<meta name="description" content="Dog Grooming in Lisburn, Northern Ireland">
 		<meta name="keywords" content="Dog Grooming, Lisburn, Northern Ireland, Dog Walking, Dog Services, Dog, dogs, groom, grom, grooming, groming, gromer, groomer, pet, puppy, puppys, puppies, pup, pups, Belfast, Moira, Ballymacash, Dunmurray, add more tags here Leon">
@@ -67,3 +67,4 @@
     </body>
 
 </html>
+
