--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Spellbound Styles - Home</title>
+</head>
+<body style= text-align:center;">
 
+
+<p>Gallery coming soon</p>
+
+
+</body>
+
+</html>
