--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 <p style="color:yellow;">I've been dog grooming for 3 years</p>
 
-<p style="color:green;">Check out the Gallert page to see some of my work</p>
+<p style="color:green;">Check out the Gallery page to see some of my work</p>
 
 <p style="color:blue;">If you like what you see, feel free to contact me to set up an appointment</p>
 
@@ -21,3 +21,4 @@
 </body>
 
 </html>
+
