--- a/about.html
+++ b/about.html
@@ -12,13 +12,14 @@
 
 <p style="color:yellow;">I've been dog grooming for 3 years</p>
 
-<p style="color:green;">Check out the Gallery page to see some of my work</p>
+<p style="color:green;">I fully insured, Certified in Dog Grooming, trained in pet first aid & CPR</p>
 
-<p style="color:blue;">If you like what you see, feel free to contact me to set up an appointment</p>
+<p style="color:blue;">Check out the Gallery page to see some of my work</p>
 
-<p style="color:purple;">Thank you!</p>
+<p style="color:purple;">If you like what you see, feel free to contact me to set up an appointment</p>
 
 </body>
 
 </html>
+
 
