--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 <body style= text-align:center;">
 
 
-<p>Gallery coming soon</p>
+<a data-flickr-embed="true" href="https://www.flickr.com/photos/204169972@N04/albums/72177720331740208" title="Dog grooming"><img src="https://live.staticflickr.com/65535/55067370110_3f54bbdbb2_c.jpg" width="1024" height="768" alt="Dog grooming"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 
 </body>
