--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 			<a href="home.html" target="iframe_a">Home</a>
 			<a href="about.html" target="iframe_a">About</a>
+			<a href="gallery.html" target="iframe_a">Gallery</a>
 			<a href="services.html" target="iframe_a">Services</a>
 			<a href="contact.html" target="iframe_a">Contact</a>
 		</div>
@@ -67,4 +68,5 @@
     </body>
 
 </html>
+
 
