--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,13 @@
 <p>Please phone or text me on 073 9458 7626</p>
 <p>Or send me a message on <a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/" target="_blank">Facebook</a> or <a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank">Instagram</a></p>
 
-<a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank"><img src="images/InstagramLogo.png" alt="Instagram"></a>
-<a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/" target="_blank"><img src="images/FacebookLogo.png" alt="Facebook"></a>
+<a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank"><img src="images/InstagramLogo.png" alt="Instagram" width="500" height="500"></a>
+<a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/" target="_blank"><img src="images/FacebookLogo.png" alt="Facebook" width="500" height="500"></a>
  
 </body>
 
 </html>
+
 
 
 
