--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <body  style="background-color:blueviolet; text-align:center;">
 
 <h2>Contact</h2>
-<p>Please phone or text me on 073 9458 7626</p>
+<a href="tel:+447394587626">Please phone or text me on 073 9458 7626 </a>
 <p>Or send me a message on <a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/" target="_blank">Facebook</a> or <a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank">Instagram</a></p>
 
 <a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank"><img src="images/InstagramLogo.png" alt="Instagram" width="100" height="100"></a>
@@ -17,6 +17,7 @@
 </body>
 
 </html>
+
 
 
 
