--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
 			<hr>
 			<iframe src="home.html" style="border:none;" width="100%" Height="100%" name="iframe_a"></iframe> 
 			
-			<h1> Hi <h1>
-			<img src="images/CHONK.jpg" alt="CHONK!!" width="50%">
+			<h1> Links <h1>
+			<a href="https://www.instagram.com/spellboundstyleslisburn/" target="_blank"><img src="images/InstagramLogo.png" alt="Instagram" width="100" height="100"></a>
+			<a href="https://www.facebook.com/p/Spellbound-Styles-61563573410339/" target="_blank"><img src="images/FacebookLogo.png" alt="Facebook" width="100" height="100"></a>
+ 
      	</div>
         
     </body>
 
 </html>
+
 
 
