--- a/home.html
+++ b/home.html
@@ -7,9 +7,10 @@
 
 
 <p>Hi, I'm Leon. I am a fully insured Certified Professional Dog Groomer, trained in pet CPR & first aid</p>
-
+  <img src="images/leon.jpg" alt="Instagram" width="70%">
 
 </body>
 
 </html>
+
 
