--- a/home.html
+++ b/home.html
@@ -6,11 +6,12 @@
 <body style= text-align:center;">
 
 
-<p>Hi, I'm Leon. I am a fully insured Certified Professional Dog Groomer, trained in pet CPR & first aid</p>
+<h1>Hi, I'm Leon. I am a fully insured Certified Professional Dog Groomer, trained in pet CPR & first aid</h1>
   <img src="images/leon.jpg" alt="Instagram" width="70%">
 
 </body>
 
 </html>
+
 
 
