--- a/home.html
+++ b/home.html
@@ -7,15 +7,14 @@
 
 
 <h1>Hi, I'm Leon. I am a fully insured Certified Professional Dog Groomer, trained in pet CPR & first aid</h1>
-  <img src="images/leon.jpg" alt="Instagram" width="50%">
+  <p> <img src="images/leon.jpg" alt="Instagram" width="50%"> <p/>
 
-  <br/>
-
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2259.0498735732767!2d-6.059633423460955!3d54.50959078705523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486105f7ffd6d72d%3A0xdc2ba3bea5439103!2sSpellbound%20Styles!5e1!3m2!1sen!2suk!4v1769710046555!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2259.0498735732767!2d-6.059633423460955!3d54.50959078705523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486105f7ffd6d72d%3A0xdc2ba3bea5439103!2sSpellbound%20Styles!5e1!3m2!1sen!2suk!4v1769710046555!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> <p/>
 
 </body>
 
 </html>
+
 
 
 
