--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 			<a href="about.html" target="iframe_a">About</a>
 			<a href="gallery.html" target="iframe_a">Gallery</a>
 			<a href="services.html" target="iframe_a">Services</a>
+			<a href="reviews.html" target="iframe_a">Reviews</a>
 			<a href="contact.html" target="iframe_a">Contact</a>
+			<a href="findUs.html" target="iframe_a">Find Us</a>
 		</div>
 		
 	</head>
@@ -70,6 +72,7 @@
     </body>
 
 </html>
+
 
 
 
