--- a/reviews.html
+++ b/reviews.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Spellbound Styles - Reviews</title>
+</head>
+<body style="background-color:blueviolet; text-align:center;">
 
+<h1>Reviews</h1>
+
+</body>
+
+</html>
