--- a/reviews.html
+++ b/reviews.html
@@ -7,6 +7,9 @@
 
 <h1>Reviews</h1>
 
+  <div id="shapo-widget-09f08788ca54afd163fe"></div>
+<script id="shapo-embed-js" type="text/javascript" src="https://cdn.shapo.io/js/embed.js" defer></script>
+  
 </body>
 
 </html>
